# gemini-mcp-server

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_DUAL_MODEL.md  TEST_COVERAGE_REPORT.md  TEST_STATUS.md  launcher.py  pyproject.toml  requirements.txt  run_tests.py  server.py  setup.py  test_runner.sh
.claude/: settings.json
.github/rulesets/: main.json
.github/workflows/: ci.yml  release.yml
docs/: BUILD_YOUR_OWN_MCP_SERVER.md  DEVELOPMENT.md  DUAL_MODEL_CONFIGURATION.md  IMPROVEMENT_IDEAS.md  IMPROVEMENT_SUGGESTIONS.md  MIGRATION_V3.md  PYCHARM_SETUP.md  TESTING.md  TROUBLESHOOTING.md
hooks/: pre-push
scripts/: bundle.py  bundler.py  dev-link.sh  install-hooks.sh  install.sh  update.sh
src/council/: __init__.py  json_rpc.py  main.py  manager.py
src/council/core/: __init__.py  registry.py
src/council/discovery/: __init__.py  model_cache.py  model_filter.py  model_registry.py
src/council/models/: __init__.py  base.py  manager.py
src/council/protocols/: __init__.py  debate.py
src/council/providers/: __init__.py  base.py  openrouter.py
src/council/services/: __init__.py  session_manager.py
src/council/tools/: __init__.py  ask.py  brainstorm.py  code_review.py  conversation.py  debug.py  explain.py  list_models.py  recommend_model.py  refactor.py  server_info.py  set_model.py  synthesize.py  test_cases.py
src/gemini_mcp/: __init__.py  json_rpc.py  main.py  server.py
src/gemini_mcp/core/: __init__.py  orchestrator.py  registry.py
src/gemini_mcp/models/: __init__.py  base.py  manager.py  (+1 more)
tests/: conftest.py  test_bundler.py  test_runner_pycharm.py  test_server.py
tests/fixtures/: __init__.py
tests/integration/: test_debate_protocol.py  test_orchestrator.py
tests/unit/: test_ask_gemini_tool.py  test_ask_tool.py  test_base_tool.py  test_brainstorm_tool.py  test_cache.py  test_debug_tool.py  test_json_rpc.py  test_main.py  test_memory.py  test_model_manager.py  test_recommend_model_tool.py  test_refactor_tool.py  test_registry.py  test_server_info_tool.py
(+21 files in other folders)
